--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -14,8 +14,7 @@
     </properties>
 
     <dependencies>
-    
-    
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
@@ -75,7 +74,24 @@
             <scope>test</scope>
         </dependency>
     
+    
+        <dependency>
+           <groupId>org.springframework.boot</groupId>
+           <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
 
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+       </dependency>
+
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+        </dependency>
+        
     </dependencies>
 
     <build>
@@ -97,4 +113,3 @@
         </plugins>
     </build>
 </project>
-
