--- a/purchase-service/pom.xml
+++ b/purchase-service/pom.xml
@@ -69,6 +69,23 @@
         </dependency>
 
 
+        <dependency>
+           <groupId>org.springframework.boot</groupId>
+           <artifactId>spring-boot-starter-data-redis</artifactId>
+       </dependency>
+
+
+       <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-amqp</artifactId>
+       </dependency>
+
+
+        <dependency>
+           <groupId>org.springframework.cloud</groupId>
+           <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+    
     </dependencies>
 
     <build>
@@ -93,4 +110,3 @@
         </plugins>
     </build>
 </project>
-
