--- a/product-service/pom.xml
+++ b/product-service/pom.xml
@@ -79,8 +79,25 @@
            <scope>test</scope>
         </dependency>
 
+       
+         <dependency>
+           <groupId>org.springframework.boot</groupId>
+           <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
+ 
+        <dependency>
+           <groupId>org.springframework.boot</groupId>
+           <artifactId>spring-boot-starter-amqp</artifactId>
+       </dependency>
+
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
     
-    </dependencies>
+ </dependencies>
 
     <build>
         <plugins>
@@ -104,4 +121,3 @@
         </plugins>
     </build>
 </project>
-
