--- a/delivery-service/pom.xml
+++ b/delivery-service/pom.xml
@@ -67,7 +67,24 @@
        </dependency>
 
     
-      </dependencies>
+       <dependency>
+           <groupId>org.springframework.boot</groupId>
+           <artifactId>spring-boot-starter-data-redis</artifactId>
+       </dependency>
+ 
+       
+       <dependency>
+           <groupId>org.springframework.boot</groupId>
+           <artifactId>spring-boot-starter-amqp</artifactId>
+       </dependency>
+
+
+       <dependency>
+          <groupId>org.springframework.cloud</groupId>
+          <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+       </dependency>
+    
+  </dependencies>
 
     <build>
         <plugins>
@@ -91,4 +108,3 @@
         </plugins>
     </build>
 </project>
-
