--- a/purchase-service/src/main/resources/Application.properties
+++ b/purchase-service/src/main/resources/Application.properties
@@ -1,5 +1,5 @@
 # Spring Datasource Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/product_db?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/purchase_db?useSSL=false&serverTimezone=UTC
 spring.datasource.username=christina
 spring.datasource.password=#Chanchan88
 
@@ -9,5 +9,15 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 # Server Port Configuration
-server.port=8080
+server.port=8082
 
+# Eureka Configuration
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+## Redis dan RabbitMQ 
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
