--- a/user-service/src/main/resources/Application.properties
+++ b/user-service/src/main/resources/Application.properties
@@ -11,3 +11,13 @@ spring.jpa.hibernate.ddl-auto=update
 # Server Port Configuration
 server.port=8080
 
+# Eureka Configuration
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+## Redis dan RabbitMQ 
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
