--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -94,6 +94,12 @@
         
     </dependencies>
 
+ <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+        <spring.boot.version>2.5.2</spring.boot.version>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
@@ -101,16 +107,17 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <release>11</release>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.5.2</version>
+                <version>${spring.boot.version}</version>
             </plugin>
         </plugins>
     </build>
 </project>
+
+
 
